<resources>
    <string name="app_name">Bomb it</string>
    <string name="title">Bomb it</string>
    <string name="singleplayer">Singleplayer</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="join">Join</string>
    <string name="create">Create</string>
    <string name="enter_code">Enter Code</string>
    <string name="enter_name">Enter Name</string>
    <string name="back">Back</string>
    <string name="PlayersListHeader">Players</string>
    <string name="start">Start</string>
    <string name="map_height">Map Height [11–31]</string>
    <string name="crate_spawn_probability">Crate Spawn Probability [0–100]</string>
    <string name="map_width">Map Width [11–41]</string>
    <string name="share_code">Share Code</string>
</resources>