<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MultiplayerStartSetupActivity">

    <ListView
        android:id="@+id/listView"
        android:layout_width="300dp"
        android:layout_height="240dp"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toStartOf="@+id/mapWidth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startButton"
        app:layout_constraintTop_toBottomOf="@+id/listView" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/backButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listView" />

    <Button
        android:id="@+id/shareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_500"
        android:text="@string/share_code"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/mapHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/listView"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/mapHeight"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/map_height"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLines="1"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/listView"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/mapWidth"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/map_width"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLines="1"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/listView"
        app:layout_constraintTop_toBottomOf="@+id/mapHeight" />

    <EditText
        android:id="@+id/crateSpawnProbability"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/crate_spawn_probability"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLines="1"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/listView"
        app:layout_constraintTop_toBottomOf="@+id/mapWidth" />
</androidx.constraintlayout.widget.ConstraintLayout>